style.css
@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700;800&display=swap');
:root{
    --primary:#3b82f6;
    --secondary:#38bdf8;
    --dark:#0f172a;
    --card:#1e293b;
    --white:#ffffff;
    --text:#e2e8f0;
    --gray:#94a3b8;
}
*{
    margin:0;
    padding:0;
    box-sizing:border-box;
    scroll-behavior:smooth;
}
body{
    font-family:'Poppins',sans-serif;
    background:var(--dark);
    color:var(--text);
    overflow-x:hidden;
    line-height:1.6;
}
img{
    width:100%;
    display:block;
}
a{
    text-decoration:none;
    color:white;
}
ul{
    list-style:none;
}
.container{
    width:90%;
    max-width:1200px;
    margin:auto;
}
.section{
    padding:100px 0;
    position:relative;
    z-index:1;
}
.dark-section{
    background:#111827;
}
::-webkit-scrollbar{
    width:10px;
}
::-webkit-scrollbar-track{
    background:#111827;
}
::-webkit-scrollbar-thumb{
    background:var(--primary);
    border-radius:20px;
}
#progress-bar{
    position:fixed;
    top:0;
    left:0;
    width:0%;
    height:5px;
    background:linear-gradient(to right,#3b82f6,#38bdf8);
    z-index:99999;
}
header{
    position:fixed;
    top:0;
    left:0;
    width:100%;
    z-index:999;
}

.navbar{
    width:100%;
    display:flex;
    justify-content:space-between;
    align-items:center;
    padding:15px 20px;   /* 8% ki jagah fixed padding */
    margin:0;
}
.logo{
    color:white;
    font-size:32px;
    font-weight:700;
}
.logo span{
    color:var(--primary);
}
.nav-links{
    display:flex;
    gap:35px;
}
.nav-links a{
    color:white;
    font-size:16px;
    font-weight:500;
    transition:.3s;
}
.nav-links a:hover{
    color:var(--secondary);
}
.menu-btn{
    color:white;
    font-size:28px;
    display:none;
    cursor:pointer;
}
/*about*/
.hero{
    min-height:100vh;
    display:flex;
    align-items:center;
    justify-content:space-between;
    gap:80px;
    width:90%;
    max-width:1200px;
    margin:auto;
    padding-top:120px;
}
.hero-left{
    flex:1;
}
.hero-left h4{
    font-size:24px;
    color:var(--secondary);
}
.hero-left h1{
    font-size:65px;
    margin:15px 0;
    line-height:1.2;
}
.hero-left h1 span{
    color:var(--primary);
}
.hero-left h3{
    font-size:32px;
    color:var(--secondary);
    margin-bottom:25px;
}
.hero-left p{
    color:var(--gray);
    line-height:1.9;
    margin-bottom:35px;
}
.hero-buttons{
    display:flex;
    gap:20px;
    margin-bottom:35px;
}
.btn{
    padding:15px 35px;
    border-radius:50px;
    display:inline-block;
    transition:.4s;
    font-weight:600;
}
.primary-btn{
    background:var(--primary);
    color:white;
}
.primary-btn:hover{
    transform:translateY(-5px);
    background:#2563eb;
}
.secondary-btn{
    border:2px solid var(--primary);
    color:white;
}
.secondary-btn:hover{
    background:var(--primary);
}
.social-icons{
    display:flex;
    gap:18px;
}
.social-icons a{
    width:50px;
    height:50px;
    border-radius:50%;
    background:var(--card);
    display:flex;
    align-items:center;
    justify-content:center;
    transition:.4s;
    font-size:20px;
}
.social-icons a:hover{
    background:var(--primary);
    transform:translateY(-7px);
}
.hero-right{
    flex:1;
    display:flex;
    justify-content:center;
}
.profile-card{
    width:400px;
    height:400px;
    border-radius:50%;
    overflow:hidden;
    border:6px solid var(--primary);
    box-shadow: 0 0 35px rgba(59,130,246,.45);
}
.profile-card img{
    height:100%;
    object-fit:cover;
}
.section-title{
    text-align:center;
    margin-bottom:70px;
}
.section-title h2{
    font-size:42px;
    color:white;
}
.section-title p{
    color:var(--gray);
    margin-top:10px;
}
.about-container{
    display:grid;
    grid-template-columns:1fr 1fr;
    gap:60px;
    align-items:center;
}
.about-image img{
    border-radius:25px;
    box-shadow:
    0 20px 40px rgba(0,0,0,.4);
}
.about-content h3{
    font-size:35px;
    margin-bottom:25px;
}
.about-content p{
    color:var(--gray);
    line-height:1.9;
}
.about-info{
    display:grid;
    grid-template-columns:repeat(2,1fr);
    gap:30px;
    margin-top:40px;
}
.about-info div{
    background:var(--card);
    padding:20px;
    border-radius:15px;
    transition:.4s;
}
.about-info div:hover{
    transform:translateY(-8px);
}
.about-info span{
    color:var(--secondary);
    font-size:14px;
}
.about-info h5{
    margin-top:8px;
    font-size:17px;
}
/* education */
.education-timeline{
    max-width:700px;
    margin:auto;
}
.education-item{
    width:100%;
    text-align:center;
}
.education-content{
    background:var(--card);
    padding:35px;
    border-radius:20px;
    box-shadow:0 10px 25px rgba(0,0,0,.25);
    transition:.4s;
}
.education-content:hover{
    transform:translateY(-10px);
}
.education-content .year{
    display:inline-block;
    background:rgba(59,130,246,.15);
    color:var(--secondary);
    padding:8px 18px;
    border-radius:30px;
    margin-bottom:20px;
    font-weight:600;
}
.education-content h3{
    font-size:28px;
    margin:15px 0;
}
.education-content h4{
    color:var(--gray);
    margin-bottom:15px;
}
.education-content p{
    color:var(--text);
}
/*experience*/
.timeline{
    position:relative;
    max-width:900px;
    margin:auto;
}
.timeline::before{
    content:"";
    position:absolute;
    top:0;
    bottom:0;
    left:50%;
    transform:translateX(-50%);
    width:4px;
    background:var(--primary);
}
.timeline-item{
    position:relative;
    width:50%;
    padding:20px 40px;
}
.timeline-item:nth-child(odd){
    left:0;
    text-align:right;
}
.timeline-item:nth-child(even){
    left:50%;
    text-align:left;
}
.timeline-content{
    background:var(--card);
    padding:25px;
    border-radius:15px;
    box-shadow:0 10px 25px rgba(0,0,0,.25);
    transition:.4s;
}
.timeline-content:hover{
    transform:translateY(-8px);
}
.timeline-content .year{
    display:inline-block;
    color:var(--secondary);
    font-weight:600;
    margin-bottom:10px;
}
.timeline-content h3{
    margin:10px 0;
}
.timeline-content h4{
    color:var(--gray);
    margin-bottom:10px;
}
.timeline-content p{
    color:var(--text);
}
/*skills*/
.skills-grid{
    display:grid;
    grid-template-columns:repeat(auto-fit,minmax(180px,1fr));
    gap:25px;
}
.skill-card{
    background:var(--card);
    padding:30px;
    text-align:center;
    border-radius:18px;
    font-weight:600;
    transition:.4s;
    border:1px solid transparent;
}
.skill-card:hover{
    transform:translateY(-10px);
    border-color:var(--primary);
    background:#243347;
    color:var(--secondary);
}
/*projects*/
.project-grid{
    display:grid;
    grid-template-columns:repeat(auto-fit,minmax(330px,1fr));
    gap:35px;
}
.project-card{
    background:var(--card);
    border-radius:20px;
    overflow:hidden;
    transition:.4s;
}
.project-card:hover{
    transform:translateY(-12px);
    box-shadow:0 20px 40px rgba(0,0,0,.35);
}
.project-card img{
    height:220px;
    object-fit:cover;
}
.project-content{
    padding:25px;
}
.project-content h3{
    margin-bottom:15px;
}
.project-content p{
    color:var(--gray);
    line-height:1.8;
    margin-bottom:20px;
}
.tech{
    display:flex;
    flex-wrap:wrap;
    gap:10px;
    margin-bottom:20px;
}
.tech span{
    background:rgba(59,130,246,.15);
    color:var(--secondary);
    padding:8px 15px;
    border-radius:30px;
    font-size:14px;
}
.project-buttons{
    display:flex;
    gap:15px;
}
/*contact*/
.contact-form{
    max-width:700px;
    margin:auto;
}
.contact-form input,
.contact-form textarea{
    width:100%;
    padding:18px;
    margin-bottom:20px;
    border:none;
    border-radius:12px;
    background:var(--card);
    color:white;
    outline:none;
    font-family:Poppins;
}
.contact-form textarea{
    resize:none;
}
.contact-form button{
    border:none;
    cursor:pointer;
}
/*footer*/
footer{
    background:#020617;
    text-align:center;
    padding:50px 20px;
}
footer h2{
    color:white;
}
footer p{
    color:var(--gray);
    margin:15px 0;
}
.footer-icons{
    display:flex;
    justify-content:center;
    gap:18px;
    margin:20px 0;
}
.footer-icons a{
    width:45px;
    height:45px;
    border-radius:50%;
    background:var(--card);
    display:flex;
    align-items:center;
    justify-content:center;
    transition:.4s;
}
.footer-icons a:hover{
    background:var(--primary);
}
.copyright{
    margin-top:25px;
    font-size:14px;
}
/*scroll to top button*/
#scrollTop{
    position:fixed;
    right:25px;
    bottom:25px;
    width:55px;
    height:55px;
    border:none;
    border-radius:50%;
    background:var(--primary);
    color:#fff;
    display:none;
    cursor:pointer;
    z-index:1000;
    display:flex;
    justify-content:center;
    align-items:center;
    font-size:22px;
    transition:.3s;
}
#scrollTop:hover{
    transform:translateY(-5px);
    background:#2563eb;
}
#scrollTop i{
    line-height:1;
}
#scrollTop:hover{
    transform:translateY(-5px);
}
/*responsive*/
/* ===========================
   RESPONSIVE DESIGN
=========================== */

@media (max-width:768px){

    /* Navbar */

    .navbar{
        padding:15px 20px;
    }
    .logo{
        font-size:26px;
    }
    .logo{
    flex-shrink:0;
}


    .nav-links{
        position:absolute;
        top:75px;
        left:0;
        width:100%;
        background:#111827;
        flex-direction:column;
        align-items:center;
        gap:25px;
        padding:30px 0;
        display:none;
    }

    .nav-links.active{
        display:flex;
    }

    .menu-btn{
        display:block;
        font-size:30px;
        cursor:pointer;
    }
    .menu-btn{
    flex-shrink:0;
}

    /* Hero */

    .hero{
        flex-direction:column-reverse;
        text-align:center;
        gap:40px;
        padding-top:110px;
    }

    .hero-left h1{
        font-size:42px;
    }

    .hero-left h3{
        font-size:24px;
    }

    .hero-left h4{
        font-size:18px;
    }

    .hero-left p{
        font-size:15px;
    }

    .hero-buttons{
        flex-direction:column;
        align-items:center;
    }

    .btn{
        width:220px;
        text-align:center;
    }

    .social-icons{
        justify-content:center;
    }

    .profile-card{
        width:260px;
        height:260px;
    }

    /* Section */

    .section{
        padding:70px 0;
    }

    .section-title h2{
        font-size:32px;
    }

    /* About */

    .about-container{
        grid-template-columns:1fr;
        text-align:center;
    }

    .about-info{
        grid-template-columns:1fr;
    }

    .about-content h3{
        font-size:28px;
    }

    /* Education */

    .education-content{
        padding:25px;
    }

    .education-content h3{
        font-size:22px;
    }

    /* Timeline */

    .timeline::before{
        left:20px;
    }

    .timeline-item{
        width:100%;
        left:0 !important;
        text-align:left;
        padding-left:60px;
        padding-right:15px;
    }

    /* Skills */

    .skills-grid{
        grid-template-columns:1fr;
    }

    /* Projects */

    .project-grid{
        grid-template-columns:1fr;
    }

    .project-card img{
        height:200px;
    }

    .project-buttons{
        flex-direction:column;
    }

    /* Contact */

    .contact-form{
        width:100%;
    }

    /* Footer */

    .footer-icons{
        flex-wrap:wrap;
    }

}

